    o Feature #4844, add auto_orient, auto_orient! methods to Image class
      (suggestion from John Oordopjes, available with ImageMagick 6.2.8)
    o Added adaptive_sharpen, adaptive_sharpen_channel methods to Image class
      (available with ImageMagick 6.2.7)
    o Added composite_image_channel, composite_image_channel! methods to Image
      class (added in ImageMagick 6.2.6)
    o Fix bug #4806, add hash, eql? methods to Pixel class (bug report from
      Tim Pease)
    o Change extension filename to match RubyGems 0.9.0 expectations.
    o Fix bug #4821, correct doc for Image#rotate (bug report from Tim Pease)
    o Update the Draw#annotate documentation

RMagick 1.12.0
    o Fix bug #4630, the new signature for #level is incompatible with
      releases prior to 1.10.1 (bug report from Al Evans)

RMagick 1.11.1
    o Fix bug #4511, add Makefile, rmagick_config.h as dependencies
      in the Makefile (bug report from Eric Hodel)
    o Ensure ExceptionInfo structures are freed

RMagick 1.11.0
    o Feature #3705, add resize_to_fit (thanks to Robert Manni for the code)
    o Added optimize_layers method to the ImageList class (available with
      ImageMagick 6.2.6)
    o Added limit_resource method to the Magick module
    o Replaced install.rb with setup.rb, improved gem install
      (bug report from Ryan Davis)
    o Added --disable-htmldoc option to setup.rb
    o Fix bug #4104, incorrect label on example (reported by Jason Lee)
    o Added contrast_stretch_channel to the Image class (available with
      ImageMagick 6.2.6)
    o Improved Magick exception handling to eliminate memory leaks when an exception
      is rescued and execution continues.
    o Tested with ImageMagick 6.2.7

RMagick 1.10.1
    o Fix bug #3437, memory leak in ImageList#to_blob
    o Fix bug #3363, Image#composite doesn't work when the source image
      is bigger than the destination
    o Fix bug #3635, Image#import_pixels doesn't accept FloatPixel or DoublePixel