@@ -966,7 +966,8 @@ exit
       "image2.html#gaussian_blur">gaussian_blur</a>, <a href=
       "image2.html#gaussian_blur_channel">gaussian_blur_channel</a>,
       <a href="image3.html#motion_blur">motion_blur</a>, <a href=
-      "image3.html#radial_blur">radial_blur</a></dt>
+      "image3.html#radial_blur">radial_blur</a>, <a href=
+      "image3.html#radial_blur_channel">radial_blur_channel</a></dt>
 
       <dd>Blur the image</dd>
 
