@@ -156,6 +156,8 @@
 #undef HAVE_QUANTUMPIXEL
 /* Not available in GM */
 #undef HAVE_RADIALBLURIMAGE
+/* Introduced in IM 6.2.4 */
+#undef HAVE_RADIALBLURIMAGECHANNEL
 #undef HAVE_RANDOMCHANNELTHRESHOLDIMAGE
 #undef HAVE_RANDOMTHRESHOLDIMAGECHANNEL
 /* Introduced in GM 1.2 & IM 6.2.2 */
