@@ -7,6 +7,8 @@ RMagick 1.13.0
       (available with ImageMagick 6.2.7)
     o Added composite_image_channel, composite_image_channel! methods to Image
       class (added in ImageMagick 6.2.6)
+    o Added radial_blur_channel method to Image class (available in
+      ImageMagick 6.2.4)
     o Fix bug #4806, add hash, eql? methods to Pixel class (bug report from
       Tim Pease)
     o Change extension filename to match RubyGems 0.9.0 expectations.
